# LightLDA

./: .gitignore  CMakeLists.txt  build.sh
cmake/modules/: FindMongo_CXX_Driver.cmake  FindMultiverso.cmake  FindZeroMQ.cmake
dev/src/: CMakeLists.txt  DataBlockFilePolicy.h  DataBlockInterface.h  DataBlockInterfaceImpl.h  DataBlockMongoDBPolicy.h  InitMongoDB.h  MetaBase.h  MetaMongoDB.h  Meta_file.h  MongoHelper.h  Vocab.cpp  Vocab.h  alias_table.cpp  common.cpp  common.h  data_block.h  data_stream.cpp  lightlda.cpp  meta.cpp  meta.h  model.cpp  mongotest.cpp  util.h
include/mongo-api/: MongoHelper.h
include/multiverso/: meta.h  row.h  server.h
inference/: CMakeLists.txt  InferNewDocument.cpp  inferWrapper.cpp  inferWrapper.hpp  inferer.cpp  inferer.h
inference/run/: infer.cpp
inference/src/: inferWrapper.cpp
lightlda/: CMakeLists.txt
lightlda/include/: Meta_file.h  alias_table.h  common.h  data_stream.h  meta.h  model.h  qxlda.hpp  util.h
lightlda/run/: lightlda.cpp  runlda_mongo.cpp
lightlda/src/: common.cpp  trainer.cpp
mongo-api/: CMakeLists.txt
mongo-api/include/: DBDataStream.hpp  DataBlockInterface.h  DataStreamImpl.h  DataStreamInterface.h  DataStreamTypes.h  LocalModelInterface.h  MetaBase.h  MetaBaseImpl.h  Meta_file.h  ModelInterface.h  ModelInterfaceImpl.hpp  MongoData_block.h  TrainerInterface.h  TrainerInterfaceImpl.h  Vocab.h  basic_LightLDA.h  basic_LightLDAImpl.h
mongo-api/run/: mongoLightLda.cpp  runLightLDA.cpp
mongo-api/src/: MongoData_block.cpp  Vocab.cpp
mongo/include/: InitMongoDB.h  MongoHelper.h
multiverso/: CMakeLists.txt
multiverso/include/multiverso/: row.h
multiverso/multiverso_server/: CMakeLists.txt  main.cpp
multiverso/src/: CMakeLists.txt  communicator.cpp  endpoint_list.cpp  server.cpp
preprocess/: CMakeLists.txt  dump_binary.cpp  dump_mongo.cpp
src/: CMakeLists.txt  alias_table.cpp  common.cpp  common.h  model.h  qxlda.cpp
src/lightlda/: CMakeLists.txt  DataBlockFilePolicy.h  DataBlockInterfaceImpl.h  DataBlockMongoDBPolicy.h  MetaBaseImpl.h  MetaMongoDB.h  MongoHelper.h  MongoInitDB.cpp  data_block.cpp  data_stream.cpp  data_stream.h  lightlda.cpp  model.cpp  qxlda.cpp  trainer.h
src/multiverso/: parameter_loader.cpp  row.cpp  server.cpp
src/multiverso_server/: CMakeLists.txt
